--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,10 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Forschung"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Lehre"
+    url: /teaching/
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
+  - title: "Person"
     url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
