--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 # Site Author
 author:
   name             : "Jana-Katharina Mende"
-  avatar           : "Bild_Mende.jpg"
+  avatar           : "Foto_Mende.jpg"
   bio              : "Lecturer in German Language and Literature, University of Liège"
   location         : "Liège, BE"
   employer         :
