--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ staticman:
   path                   : "_data/comments/{options.slug}"
   requiredFields         : ['name', 'email', 'message']
   transforms:
-    email                : "md5"
+    email                : "jana-katharina.mende@germanistik.uni-halle.de"
   generatedFields:
     date:
       type               : "date"
